# matrix_speech_controller

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
mtx_ctl/: config.ini  config.py  logging_setup.py  main.py  matrix_conn.py  speech_recognition.py  tools.py  utils.py
mtx_ctl/agents/: agent_interface.py  openai_agent.py
