[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mtx_ctl"
version = "0.1.0"
description = "A project for controlling a running https://github.com/JesperFritsch/home_led_matrix application"
authors = [
    { name = "Jesper Fritsch", email = "jesperf96@gmail.com" }
]
dependencies = [
    "vosk",
    "pyaudio",
    "openai",
    "docstring-parser",
]

[tool.setuptools]
packages = ["mtx_ctl"]
include-package-data = true


[tool.black]
line-length = 88

[tool.mypy]
strict = true
